Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Add upgrade.upgrade_z2_8() to migrate indexes for Zope-2.8.x
Bug fixes:
~~~~~~~~~~
- Removed extremely long line from traceback in New.
- #872: default section/workspaces were created with unicode titles.
- Call translation_service instead of directly Localizer in installer.
- #889: added upgrade function to fix broken flexible fields
- Fixed MembershipTool to call _getEntry instead of getEntry to get
  a user's full name.
- Fixed utils.computeContributors to use _getEntry.
CPS internal features:
~~~~~~~~~~~~~~~~~~~~~~
-