@@ -4,6 +4,9 @@ Requires:
 New features:
 ~~~~~~~~~~~~~
 - Add upgrade.upgrade_z2_8() to migrate indexes for Zope-2.8.x
+    email_field = 'email'
+- Membership tool now has a property to set the field for email address.
+
 Bug fixes:
 ~~~~~~~~~~
 - Removed extremely long line from traceback in New.
